5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1684_1105.log
== SUBMITION (2019-04-18 21:23:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("Qual seu brasao de GOT: ")
if X.lower() == "lobo" :
	Y = "Stark"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X.lower() == "leao" :
	Y = "Lannister"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X.lower() == "veado" :
	Y = "Baratheon"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X.lower() == "dragao" :
	Y = "Targaryen"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X.lower() == "rosa" :
	Y = "Tyrell"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X.lower() == "sol" :
	Y = "Martell"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X.lower() == "lula" :
	Y = "Greyjoy"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X.lower() == "esfolado" :
	Y = "Bolton"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X.lower() == "turta" :
	Y = "Tully"
	print("Entrada: ", X)
	print("Brasao: " Y)
else :
	print("Entrada: ", X)
	print("Brasao invalido")
-- EXECUTION TIME:
0.139835
-- ERROR:
  File "/home/codebench/codes/1684/1105/main.py", line 7
    print("Brasao: " Y)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 21:27:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
X = input("Qual seu brasao de GOT: ")
if X == "lobo" :
	Y = "Stark"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X == "leao" :
	Y = "Lannister"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X == "veado" :
	Y = "Baratheon"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X == "dragao" :
	Y = "Targaryen"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X == "rosa" :
	Y = "Tyrell"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X == "sol" :
	Y = "Martell"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X == "lula" :
	Y = "Greyjoy"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif X == "esfolado" :
	Y = "Bolton"
	print("Entrada: ", X)
	print("Brasao: " Y)
elif == "turta" :
	Y = "Tully"
	print("Entrada: ", X)
	print("Brasao: " Y)
else :
	print("Entrada: ", X)
	print("Brasao invalido")
-- EXECUTION TIME:
0.121852
-- ERROR:
  File "/home/codebench/codes/1684/1105/main.py", line 7
    print("Brasao: " Y)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 21:29:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("Qual seu brasao de GOT: ")
if x == "lobo" :
	y = "Stark"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "leao" :
	y = "Lannister"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "veado" :
	y = "Baratheon"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x== "dragao" :
	y = "Targaryen"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "rosa" :
	y = "Tyrell"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "sol" :
	y = "Martell"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "lula" :
	y = "Greyjoy"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "esfolado" :
	y = "Bolton"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "turta" :
	y = "Tully"
	print("Entrada: ", x)
	print("Brasao: " y)
else :
	y = "invalido"
	print("Entrada: ", x)
	print("Brasao ", y)
-- ERROR:
File "XXXX", line 7
    print("Brasao: " y)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 21:30:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("Qual seu brasao de GOT: ")
if x == "lobo" :
	y = "Stark"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "leao" :
	y = "Lannister"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "veado" :
	y = "Baratheon"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x== "dragao" :
	y = "Targaryen"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "rosa" :
	y = "Tyrell"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "sol" :
	y = "Martell"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "lula" :
	y = "Greyjoy"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "esfolado" :
	y = "Bolton"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "turta" :
	y = "Tully"
	print("Entrada: ", x)
	print("Brasao: " y)
else :
	y = "invalido"
	print("Entrada: ", x)
	print("Brasao ", y)
-- EXECUTION TIME:
0.206614
-- ERROR:
  File "/home/codebench/codes/1684/1105/main.py", line 11
    print("Brasao: " y)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 21:30:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("Qual seu brasao de GOT: ")
if x == "lobo" :
	y = "Stark"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "leao" :
	y = "Lannister"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "veado" :
	y = "Baratheon"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x== "dragao" :
	y = "Targaryen"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "rosa" :
	y = "Tyrell"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "sol" :
	y = "Martell"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "lula" :
	y = "Greyjoy"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "esfolado" :
	y = "Bolton"
	print("Entrada: ", x)
	print("Brasao: " y)
elif x == "turta" :
	y = "Tully"
	print("Entrada: ", x)
	print("Brasao: " y)
else :
	y = "invalido"
	print("Entrada: ", x)
	print("Brasao ", y)
-- ERROR:
File "XXXX", line 11
    print("Brasao: " y)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 21:31:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("Qual seu brasao de GOT: ")
if x == "lobo" :
	y = "Stark"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "leao" :
	y = "Lannister"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "veado" :
	y = "Baratheon"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x== "dragao" :
	y = "Targaryen"
	print("Entrada: ", x)
	print("Brasao: ",y)
elif x == "rosa" :
	y = "Tyrell"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "sol" :
	y = "Martell"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "lula" :
	y = "Greyjoy"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "esfolado" :
	y = "Bolton"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "turta" :
	y = "Tully"
	print("Entrada: ", x)
	print("Brasao: ", y)
else :
	y = "invalido"
	print("Entrada: ", x)
	print("Brasao ", y)
-- EXECUTION TIME:
0.173984
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Brasao:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao  invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Brasao:  Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 21:31:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("Qual seu brasao de GOT: ")
if x == "lobo" :
	y = "Stark"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "leao" :
	y = "Lannister"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "veado" :
	y = "Baratheon"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x== "dragao" :
	y = "Targaryen"
	print("Entrada: ", x)
	print("Brasao: ",y)
elif x == "rosa" :
	y = "Tyrell"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "sol" :
	y = "Martell"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "lula" :
	y = "Greyjoy"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "esfolado" :
	y = "Bolton"
	print("Entrada: ", x)
	print("Brasao: ", y)
elif x == "turta" :
	y = "Tully"
	print("Entrada: ", x)
	print("Brasao: ", y)
else :
	y = "invalido"
	print("Entrada: ", x)
	print("Brasao ", y)
-- OUTPUT:
Entrada:  lula
Brasao:  Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 21:32:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("Qual seu brasao de GOT: ")
if x == "lobo" :
	y = "Stark"
	print("Entrada: ", x)
	print("Casa: ", y)
elif x == "leao" :
	y = "Lannister"
	print("Entrada: ", x)
	print("Casa: ", y)
elif x == "veado" :
	y = "Baratheon"
	print("Entrada: ", x)
	print("Casa: ", y)
elif x== "dragao" :
	y = "Targaryen"
	print("Entrada: ", x)
	print("Casa: ", y)
elif x == "rosa" :
	y = "Tyrell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif x == "sol" :
	y = "Martell"
	print("Entrada: ", x)
	print("Casa: ", y)
elif x == "lula" :
	y = "Greyjoy"
	print("Entrada: ", x)
	print("Casa: ", y)
elif x == "esfolado" :
	y = "Bolton"
	print("Entrada: ", x)
	print("Casa: ", y)
elif x == "turta" :
	y = "Tully"
	print("Entrada: ", x)
	print("Casa: ", y)
else :
	y = "invalido"
	print("Entrada: ", x)
	print("Brasao ", y)
-- EXECUTION TIME:
0.210072
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa:  Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao  invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa:  Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
